[project]
name = "csv23"
authors = [{ name = "Sebastian Bank", email = "sebastian.bank@uni-leipzig.de" }]
description = "Python 2/3 unicode CSV compatibility layer"
keywords = ["unicode", "csv", "reader", "writer"]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
requires-python = ">=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*,!=3.6.*,!=3.7.*,!=3.8.*"
dependencies = ["mock; python_version<'3'"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/xflr6/csv23"
Documentation = "https://csv23.readthedocs.io"
Changelog = "https://csv23.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/xflr6/csv23/issues"
CI = "https://github.com/xflr6/csv23/actions"
Coverage = "https://codecov.io/gh/xflr6/csv23"

[project.optional-dependencies]
dev = ["build", "wheel", "twine", "flake8", "Flake8-pyproject", "pep8-naming", "tox>=3"]
test = ["mock>=3", "pytest>=4.6", "pytest-mock>=2", "pytest-cov"]
docs = ["sphinx>=5", "sphinx-rtd-theme"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = { attr = "csv23.__version__" }

[tool.flake8]
exclude = ["docs", ".tox"]
ignore = ["E126", "E128", "W503"]
max-line-length = 120

[tool.pytest.ini_options]
minversion = "4.6"
testpaths = ["csv23", "tests"]
addopts = [
  "--doctest-modules",
  "--doctest-glob='*.rst'", "--ignore=docs/conf.py",
  "--cov", "--cov-report=term", "--cov-report=html",
  "--strict-markers",
]
mock_use_standalone_module = true
log_cli_level = "WARNING"
log_file = "test-log.txt"
log_file_level = "DEBUG"

[tool.coverage.run]
source = ["csv23"]
branch = false

[tool.tox]
legacy_tox_ini = """
  [tox]
  envlist = py{27,313,312,311,310,39,py3}
  skip_missing_interpreters = true

  [testenv]
  extras = test
  commands = python run-tests.py {posargs}
"""
