[project]
name = "csv23"
authors = [{ name = "Sebastian Bank", email = "sebastian.bank@uni-leipzig.de" }]
description = "Python 2/3 unicode CSV compatibility layer"
keywords = ["unicode", "csv", "reader", "writer"]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/xflr6/csv23"
Documentation = "https://csv23.readthedocs.io"
Changelog = "https://csv23.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/xflr6/csv23/issues"
CI = "https://github.com/xflr6/csv23/actions"
Coverage = "https://app.codecov.io/gh/xflr6/csv23"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = { attr = "csv23.__version__" }

[dependency-groups]
dev = [  # $ pip install -e . --group dev
  "build",
  "tox",
  "twine",
  "wheel",
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "test" },
  { include-group = "typing" },
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
]
lint = [
  "flake8",
  "Flake8-pyproject",
  "pep8-naming",
]

test = [
  "coverage",
  "mock>=3",
  "pytest>=4.6",
  "pytest-cov",
  "pytest-mock>=2",
]
typing = [
  "mypy",
]

[tool.mypy]
packages = ["csv23"]
# https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
#check_untyped_defs = true
disallow_subclassing_any = true

[tool.flake8]
exclude = ["docs", ".tox"]
ignore = ["E126", "E128", "W503"]
max-line-length = 120

[tool.pytest.ini_options]
minversion = "4.6"
testpaths = ["csv23", "tests"]
addopts = [
  "--doctest-modules",
  "--doctest-glob='*.rst'", "--ignore=docs/conf.py",
  "--cov", "--cov-report=term", "--cov-report=html",
  "--strict-markers",
]
mock_use_standalone_module = true
log_cli_level = "WARNING"
log_file = "test-log.txt"
log_file_level = "DEBUG"

[tool.coverage.run]
source = ["csv23"]
branch = false

[tool.tox]
requires = ["tox>=4.22"]
env_list = ["3.14", "3.13", "3.12", "3.11", "3.10"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [["python", "-X", "dev", "run-tests.py", { replace = "posargs", extend = true }]]
