[metadata]
license_file = LICENSE.txt

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 3.4
testpaths = csv23 tests
addopts =
  --doctest-modules --doctest-glob='*.rst'
  --cov --cov-report=term --cov-report=html
mock_use_standalone_module = true

[coverage:run]
source = csv23
branch = false

[flake8]
ignore = E126,E128
max-line-length = 100
exclude = .tox
