[metadata]
license_file = LICENSE.txt

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 4.6
testpaths =
  csv23
  tests
addopts =
  --doctest-glob='*.rst'
  --doctest-modules --ignore=docs/conf.py
  --cov --cov-report=term --cov-report=html
  --strict-markers
mock_use_standalone_module = true
log_cli_level = WARNING
log_file = test-log.txt
log_file_level = DEBUG

[coverage:run]
source = csv23
branch = false

[flake8]
ignore = E126,E128,W503
max-line-length = 120
exclude = docs, .tox
